// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IsolateTest TestObject constructor 1`] = `
{
  "$type": "UnitTest",
  "children": [],
  "data": {
    "abortController": AbortController {
      Symbol(signal): AbortSignal {
        Symbol(kEvents): Map {},
        Symbol(events.maxEventTargetListeners): 10,
        Symbol(events.maxEventTargetListenersWarned): false,
        Symbol(kAborted): false,
        Symbol(kReason): undefined,
      },
    },
    "fieldName": "unicycle",
    "message": "I am Root.",
    "severity": "error",
    "status": "UNTESTED",
    "testFn": [MockFunction],
    "type": "Test",
  },
  "key": null,
  "keys": {},
  "output": null,
  "parent": null,
  "status": "INITIAL",
}
`;

exports[`IsolateTest testObject.warn Should mark the test as warning 1`] = `
{
  "$type": "UnitTest",
  "children": [],
  "data": {
    "abortController": AbortController {
      Symbol(signal): AbortSignal {
        Symbol(kEvents): Map {},
        Symbol(events.maxEventTargetListeners): 10,
        Symbol(events.maxEventTargetListenersWarned): false,
        Symbol(kAborted): false,
        Symbol(kReason): undefined,
      },
    },
    "fieldName": "unicycle",
    "message": "I am Root.",
    "severity": "warning",
    "status": "UNTESTED",
    "testFn": [MockFunction],
    "type": "Test",
  },
  "key": null,
  "keys": {},
  "output": null,
  "parent": null,
  "status": "INITIAL",
}
`;
